search with textQuery+filterConditions draft
