# pkg/api/transformers.go
@@ -138,13 +138,11 @@ func formats2Rest(fs *format.Formats) similapi.Formats {
 
 func searchRecordsRequest2Proto(sr similapi.SearchRecordsRequest) *index.SearchRecordsRequest {
 	return &index.SearchRecordsRequest{
-		Text:   sr.Text,
-		Format: sr.Format,
-		Tags:   sr.Tags,
-		Strict: cast.Ptr(sr.Strict),
-		Path:   sr.Path,
-		Offset: cast.Ptr(int64(sr.Offset)),
-		Limit:  cast.Ptr(int64(sr.Limit)),
+		TextQuery:        sr.TextQuery,
+		FilterConditions: sr.FilterConditions,
+		GroupByPathOff:   cast.Ptr(sr.GroupByPathOff),
+		Offset:           cast.Ptr(int64(sr.Offset)),
+		Limit:            cast.Ptr(int64(sr.Limit)),
 	}
 }
 
